# async-embedded-demo

./: .gitignore  99-st-link-v2_1.rules  Cargo.toml  README.md  memory.x  openocd.cfg  rust-toolchain.toml
.cargo/: config.toml
firmware/: Cargo.toml
firmware/src/: lib.rs  main.rs  net.rs
format/: Cargo.toml
format/src/: device_to_server.rs  lib.rs  server_to_device.rs
