
[package]
name = "format"
edition = "2021"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = "0.7.8"
postcard = "0.7.0"
defmt =  { version = "0.3.0", optional = true }

[dependencies.serde]
version = "1.0.126"
features = ["derive"]
default-features = false

[features]
defmt_impl = ["defmt"]